# compcollab-game

./: .Cargo.toml.un~  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  USDT_BTC_86400_1596283200_1599048000.csv  diesel.toml  notes.md  trace
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml
migrations/2021-02-05-194424_create_btc_usdt/: down.sql  up.sql
migrations/2021-02-05-194424_create_usdt_btc/: down.sql  up.sql
migrations/2021-03-08-211718_timestampindex4usdt_btc/: down.sql  up.sql
src/: candly.rs  core.rs  data.rs  lib.rs  schema.rs
src/back_test/: mod.rs
src/data/: dbpopulate.rs  market.rs  mod.rs  model.rs
src/data/dbapi/: mod.rs
src/data/sources/: poloniex.rs
