[package]
name = "compcollab-game"
version = "0.1.0"
authors = ["Albino Cordeiro <albino@sportlogiq.com>"]
edition = "2018"
description = "compcollab-game mandatory description"
repository = "https://github.com/albinocordeiro/compcollab-game"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0", features = ["json", "blocking"] }
tokio = { version = "^1", features = ["full"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
csv = "^1"
chrono = "^0.4"
clap = "^2.33"
phf = { version = "^0.7.24", features = ["macros"] }
cargo-watch = 

[dev-dependencies]
pretty-assertions = 

[[bin]]
name = "candly"
path = "src/candly.rs" 