[package]
name = "compcollab-game"
version = "0.1.0"
authors = ["Albino Cordeiro <albino@sportlogiq.com>"]
edition = "2018"
description = "compcollab-game mandatory description"
repository = "https://github.com/albinocordeiro/compcollab-game"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
bigdecimal = "0.2.0"
diesel = { version = "^1.4.4", features = ["postgres", "chrono", "numeric", "64-column-tables"] }
dotenv = "0.15.0"
reqwest = { version = "^0", features = ["json", "blocking"] }
tokio = { version = "^1", features = ["full"] }
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
csv = "^1"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33"
phf = { version = "^0.7.24", features = ["macros"] }
